--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "scripts": {
     "build": "webpack --config webpack.conf.js",
+    "dev": "webpack-dev-server --config webpack.conf.js"
   },
   "license": "MIT",
   "devDependencies": {
     "uglifyjs-webpack-plugin": "^0.4.3",
+    "webpack-dev-server": "^2.4.4"
   }
 }
