--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "~0.28.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "style-loader": "~0.16.1",
+    "stylus": "~0.54.5",
+    "stylus-loader": "^3.0.1",
     "uglifyjs-webpack-plugin": "^0.4.3",
     "webpack-dev-server": "^2.4.4"
   }
