--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "~0.28.0",
     "extract-text-webpack-plugin": "^2.1.0",
+    "optimize-css-assets-webpack-plugin": "^1.3.1",
     "style-loader": "~0.16.1",
     "stylus": "~0.54.5",
     "stylus-loader": "^3.0.1",
